--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -4,11 +4,10 @@
 }
     .Header span {
         font-weight: 800;
-        font-size: 1.5em;
+        font-size: 1.5rem;
         color: lightsteelblue;
     }
     .Header span + span {
-        margin-left: 1em;
         font-weight: 100;
         color: lightblue;
     }
